# hiprs

./: README.md  setup.cfg
benchmarks/: badre.ipynb  behravan.ipynb  glinternet.R  hiPRS and Penalized PRSs.ipynb  readme.md
src/hiprs/: interactions.py  mrmr.py  scores.py  snps.py
