[metadata]
name = hiprs - Nicola R Franco
version = 0.0.2
author = Nicola R Franco
author_email = nicolarares.franco@polimi.it
description = A package for constructing High-order Interaction aware Polygenic Risk Scores (HIPRSs)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NicolaRFranco/hiprs/
project_urls =
    Bug Tracker = https://github.com/NicolaRFranco/hiprs/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ipython
    numpy
    pandas
    mlxtend
    scipy
    scikit-learn

[options.packages.find]
where = src
